readying for deployment

--- a/src/style.css
+++ b/src/style.css
@@ -19,45 +19,6 @@ body {
 	color: #FB3F39;
 	text-shadow: 5px 5px 0 #14265C;
 }
-/*
-.checkbox-inline {
-	padding:2px;
-	margin:2px;
-}
-
-.form-inline .radio input[type="radio"],
-.form-inline .checkbox input[type="checkbox"],
-input[type=checkbox],
-input[type=radio]{
-	margin-right:5px;
-}
-
-.form-inline h4{
-	display:inline-block;
-	margin-right:10px;
-}
-
-#advSearch .radio{
-	display:block;
-}
-
-#advSearch .radio input[type=text]{
-	width:30%;
-	margin-top:2%;
-}
-
-.form-inline .col-xs-2{
-	padding-left:0;
-}
-
-#mainSearch{
-	margin-right:2%;
-	width:50%;
-}
-
-#advancedButton{
-
-}*/
 
 .title {
   color: #428bca;
@@ -66,7 +27,7 @@ input[type=radio]{
 }
 
 .redbtn {
-  background-color: red;
+  background-color: #FB3F39;
   color: white;
 }
 
